--- a/docs/_static/css/extra.css
+++ b/docs/_static/css/extra.css
@@ -39,6 +39,11 @@
 .icon-middle {
     vertical-align: middle;
 }
+
+.md-typeset p {
+    margin: 0.5em 0!important;
+}
+
 @media only screen and (max-width: 59.9375em){
     html .md-nav__link[for=__toc]:after{
         color:inherit;
