--- a/docs/_static/css/extra.css
+++ b/docs/_static/css/extra.css
@@ -44,6 +44,16 @@
     margin: 0.5em 0!important;
 }
 
+div.leftside {
+    width: 43%;
+    padding: 0px 3px 0px 0px;
+    float: left;
+}
+  
+div.rightside {
+    margin-left: 45%;
+}
+
 @media only screen and (max-width: 59.9375em){
     html .md-nav__link[for=__toc]:after{
         color:inherit;
